test_regress/t/t_fork_disable.out
%Error-UNSUPPORTED: t/t_fork_disable.v:16:7: Unsupported: disable fork statements
                                           : ... note: In instance 't'
   16 |       disable fork;
      |       ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_fork_disable.v:17:7: Unsupported: wait fork statements
                                           : ... note: In instance 't'
   17 |       wait fork;
      |       ^~~~
%Error: Exiting due to
